--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -60,11 +60,87 @@
 <% end %>
 <%= render "students/shared/links" %>
  en formulario generado por devise -->
-<script type="text/javascript">
 
-  function validacion() {
+<style type="text/css">
+
+  .help {
+    margin-left: 0px;
+    margin-top: 0;
+    font-size: 0.8em;
+    color: #777;
+
+  }
+  .quit-margen2-botton2{
+    margin-bottom: 0px;
+    margin-bottom: 0;
+  }
+</style>
+
+
+
+<script type="text/javascript">
+    $("#formValidate").validate({
+        rules: {
+            uname: {
+                required: true,
+                minlength: 5
+            },
+            cemail: {
+                required: true,
+                email:true
+            },
+            password: {
+                required: true,
+                minlength: 5
+            },
+            cpassword: {
+                required: true,
+                minlength: 5,
+                equalTo: "#password"
+            },
+            curl: {
+                required: true,
+                url:true
+            },
+            crole:"required",
+            ccomment: {
+                required: true,
+                minlength: 15
+            },
+            cgender:"required",
+            cagree:"required",
+        },
+        //For custom messages
+        messages: {
+            uname:{
+                required: "Enter a username",
+                minlength: "Enter at least 5 characters"
+            },
+            curl: "Enter your website",
+        },
+        errorElement : 'div',
+        errorPlacement: function(error, element) {
+            var placement = $(element).data('error');
+            if (placement) {
+                $(placement).append(error)
+            } else {
+                error.insertAfter(element);
+            }
+        }
+    });
+
+
+
+
+
+
+
+
+    function validacion() {
       return false
   };
+
+
 
   function validaciones(){
       var aux=true
@@ -74,6 +150,8 @@
       var messageError2="solo se permite letras";
       if (inputName.value.length<3){
           alert(messageError1);
+          inputName.style.borderColor="red";
+          inputName.placeholder=messageError2;
           aux= false
       }
       if ( !isNaN(inputName.value)){
@@ -144,9 +222,9 @@
           <div class="row">
             <form class="col s12">
               <div class="row">
-                <div class="input-field  col s6 ">
-
-                  <%= f.text_field :name,placeholder:'Name',autofocus: true ,class:"active validate"%>
+                <div class="input-field  col s6  ">
+                  <%= f.text_field :name,placeholder:'Name',autofocus: true ,class: "active validate", style: "margin-bottom: 0px"%>
+                  <p class="help">minimo 6 letras</p>
                 </div>
                 <div class="input-field  col s6 ">
                   <%= f.text_field :last_name , placeholder:'Last Name',autofocus: true  ,class:"active validate"%>
@@ -192,7 +270,7 @@
               </div>
 
               <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col s6 quit-margen-botton">
                   <%= f.password_field :password,placeholder:'Password (6 characters minimun)', autocomplete: "off" ,class:"active validate"%>
                 </div>
                 <div class="input-field col s6">
@@ -216,60 +294,4 @@
 </div>
 
 <%= render "students/shared/links" %>
-<style type="text/css">
-  *{
-    margin: 0;
-    padding: 0;
-  }
-
-  html {
-    font-family: GillSans, Calibri, Trebuchet, sans-serif;
-  }
-  .header {
-    width: 100%;
-    height: 100px;
-    background-color: #232F3E;
-    display: inline-block;
-  }
-  .container{
-    background-color:  whitesmoke;
-  }
-    .row{
-      background-color:ghostwhite;
-    }
-
-  /* label color */
-  .input-field label {
-    color: #000;
-  }
-  /* label focus color */
-  .input-field input[type=text]:focus + label {
-    color: #000;
-  }
-  /* label underline focus color */
-  .input-field input[type=text]:focus {
-    border-bottom: 1px solid #000;
-    box-shadow: 0 1px 0 0 #000;
-    background-color: white;
-    border-radius:4px;
-    border:1px solid #1a237e;
-  }
-  /* valid color */
-  .input-field input[type=text].valid {
-    border-bottom: 1px solid #000;
-    box-shadow: 0 1px 0 0 #000;
-  }
-  /* invalid color */
-  .input-field input[type=text].invalid {
-    border-bottom: 2px solid #000;
-    box-shadow: 0 1px 0 0 #000;
-    border: 2px solid #A8A8A8;
-    background-color: #E9E9E9;
-  }
-  /* icon prefix focus color */
-  .input-field .prefix.active {
-    color: #000;
-  }
-
-</style>
 
